infra/k8s/customer-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: customer-depl-2
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: customer-2
  template:
    metadata:
      labels: 
        app: customer-2 
    spec: 
      containers: 
        - name: customer
          image: sydsfn/customer-demo-2 
---
apiVersion: v1 
kind: Service 
metadata:
  name: customer-srv
spec: 
  selector:
    app: customer-2 
  ports:
  - name: customer-2  
    protocol: TCP 
    port: 3003
    targetPort: 3003
