infra/k8s/orders-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: orders-depl-2
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: orders-2
  template:
    metadata:
      labels: 
        app: orders-2 
    spec: 
      containers: 
        - name: orders-2
          image: sydsfn/order-demo-2 
---
apiVersion: v1 
kind: Service 
metadata:
  name: orders-srv
spec: 
  selector:
    app: orders-2
  ports:
  - name: orders-2  
    protocol: TCP 
    port: 3002
    targetPort: 3002
