infra/k8s/products-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: tickets-depl-2
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: tickets-2
  template:
    metadata:
      labels: 
        app: tickets-2 
    spec: 
      containers: 
        - name: tickets-2
          image: sydsfn/tickets-demo-2  
---
apiVersion: v1 
kind: Service 
metadata:
  name: tickets-srv
spec: 
  selector:
    app: tickets-2
  ports:
  - name: tickets-2  
    protocol: TCP 
    port: 3001
    targetPort: 3001
