infra/k8s/ingress-nginx-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /tickets/?(.*)
        pathType: Prefix
        backend:
          service:
            name: tickets-srv
            port:
              number: 3001
      - path: /orders/?(.*) 
        pathType: Prefix
        backend:
          service:
            name: orders-srv  
            port:
              number: 3002
      - path: /customer/?(.*)  
        pathType: Prefix
        backend:
          service:
            name: customer-srv  
            port:
              number: 3003
